[gd_scene load_steps=10 format=3 uid="uid://bpikkqsgdxaaw"]

[ext_resource type="Script" uid="uid://od0y5000gj8x" path="res://Scripts/settings.gd" id="1_nv2g0"]
[ext_resource type="Texture2D" uid="uid://c763hasgleobs" path="res://Assets/BG.png" id="2_6vr2p"]
[ext_resource type="Texture2D" uid="uid://kfps87gt2b65" path="res://Assets/MainMenuArt/Buttons/BackDefault.png" id="3_j2dne"]
[ext_resource type="Texture2D" uid="uid://gf3nn8ojaftw" path="res://Assets/MainMenuArt/Buttons/BackPress.png" id="4_6kysc"]
[ext_resource type="Texture2D" uid="uid://bch6kx63ly1to" path="res://Assets/MainMenuArt/Buttons/BackHover.png" id="5_6vr2p"]
[ext_resource type="ButtonGroup" uid="uid://c7xcy5ypq2h8u" path="res://Assets/ButtonGroups/p1_settings_button_group.tres" id="6_6vr2p"]
[ext_resource type="ButtonGroup" uid="uid://cni6hdr6ym78c" path="res://Assets/ButtonGroups/p2_settings_button_group.tres" id="7_f60ng"]

[sub_resource type="InputEventKey" id="InputEventKey_dgbfx"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_mdv20"]
events = [SubResource("InputEventKey_dgbfx")]

[node name="Settings" type="Node2D"]
script = ExtResource("1_nv2g0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1200.0

[node name="BG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6vr2p")

[node name="BackButton" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -706.0
offset_top = -1120.0
offset_right = -412.0
offset_bottom = -1010.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureButton" type="TextureButton" parent="Control/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_mdv20")
texture_normal = ExtResource("3_j2dne")
texture_pressed = ExtResource("4_6kysc")
texture_hover = ExtResource("5_6vr2p")
ignore_texture_size = true

[node name="P1Buttons" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 332.0
offset_top = 342.0
offset_right = 1220.0
offset_bottom = 1162.0

[node name="Buttons" type="VBoxContainer" parent="Control/P1Buttons"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CheckButton1" type="CheckButton" parent="Control/P1Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("6_6vr2p")
text = "Ability Cycle: [Q] 
Ability Use: [E]"
alignment = 1

[node name="CheckButton2" type="CheckButton" parent="Control/P1Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("6_6vr2p")
text = "Ability Cycle: [E] 
Ability Use: [Q]"
alignment = 1

[node name="CheckButton3" type="CheckButton" parent="Control/P1Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("6_6vr2p")
text = "Ability Cycle: [CTRL] 
Ability Use: [SHIFT]"
alignment = 1

[node name="CheckButton4" type="CheckButton" parent="Control/P1Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("6_6vr2p")
text = "Ability Cycle: [SHIFT] 
Ability Use: [C]"
alignment = 1

[node name="P2Buttons" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 1042.0
offset_top = 342.0
offset_right = 2132.0
offset_bottom = 1162.0

[node name="Buttons" type="VBoxContainer" parent="Control/P2Buttons"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CheckButton5" type="CheckButton" parent="Control/P2Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("7_f60ng")
text = "Ability Cycle: [O] 
Ability Use: [U]"
alignment = 1

[node name="CheckButton6" type="CheckButton" parent="Control/P2Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("7_f60ng")
text = "Ability Cycle: [U] 
Ability Use: [O]"
alignment = 1

[node name="CheckButton7" type="CheckButton" parent="Control/P2Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("7_f60ng")
text = "Ability Cycle: [SLASH] 
Ability Use: [APOSTROPHE]"
alignment = 1

[node name="CheckButton8" type="CheckButton" parent="Control/P2Buttons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_group = ExtResource("7_f60ng")
text = "Ability Cycle: [SLASH] 
Ability Use: [N]"
alignment = 1

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 252.0
offset_top = 226.0
offset_right = 1672.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 125
text = "Player 1         Player 2"
horizontal_alignment = 1

[connection signal="pressed" from="Control/BackButton/TextureButton" to="." method="on_back_button_pressed"]
[connection signal="pressed" from="Control/P1Buttons/Buttons/CheckButton1" to="." method="_on_check_button_1_pressed"]
[connection signal="pressed" from="Control/P1Buttons/Buttons/CheckButton2" to="." method="_on_check_button_2_pressed"]
[connection signal="pressed" from="Control/P1Buttons/Buttons/CheckButton3" to="." method="_on_check_button_3_pressed"]
[connection signal="pressed" from="Control/P1Buttons/Buttons/CheckButton4" to="." method="_on_check_button_4_pressed"]
[connection signal="pressed" from="Control/P2Buttons/Buttons/CheckButton5" to="." method="_on_check_button_5_pressed"]
[connection signal="pressed" from="Control/P2Buttons/Buttons/CheckButton6" to="." method="_on_check_button_6_pressed"]
[connection signal="pressed" from="Control/P2Buttons/Buttons/CheckButton7" to="." method="_on_check_button_7_pressed"]
[connection signal="pressed" from="Control/P2Buttons/Buttons/CheckButton8" to="." method="_on_check_button_8_pressed"]
